# src/routes/regionRoutes.js
@@ -1,9 +1,11 @@
 const express = require('express');
 const router = express.Router();
-const { getStatesByCountry } = require('../controllers/regionController');
+const { getStatesByCountry,getCountryList ,getCitiesByState} = require('../controllers/regionController');
 
 
 
 router.post('/getStatesByCountry', getStatesByCountry);
+router.get('/getCountryList', getCountryList);
+router.post('/getCitiesByState', getCitiesByState);
 
 module.exports = router;
